<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoomMates</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="priceOfRent">Price of Rent:</string>
    <string name="numbOfPeople">Number of People in Household:</string>
    <string name="numbOfPeopleHint"># of People</string>
    <string name="zero">0</string>
    <string name="rentController">Rent Controller</string>
    <string name="peopleController">People # Controller</string>
    <string name="output">Amount:</string>
    <string name="fab">fab</string>
    <string name="rent">Rent</string>
    <string name="clear">Clear</string>

    <string name="moneysymbol">$</string>

    <string-array name="default_home_setting">
        <item>Expenses</item>
        <item>Rent</item>
        <item>Tip</item>
        <item>Loan</item>
    </string-array>

    <string-array name="app_colors">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Amber</item>
        <item>Blue Grey</item>
        <item>RoomMates</item>
    </string-array>

    <string-array name="statusArray">
        <item>I owe</item>
        <item>They owe</item>
        <item>Settled</item>
    </string-array>

    <string-array name="alarmArray">
        <item>None</item>
        <item>One time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="gratuity_array">
        <item>14%</item>
        <item>15%</item>
        <item>16%</item>
        <item>17%</item>
        <item>18%</item>
        <item>19%</item>
        <item>20%</item>
        <item>21%</item>
        <item>22%</item>
    </string-array>

    <string name="involvedPartiesEditText">Involved Parties(separate by comas)</string>
    <string name="expensePriceHint">Expense Price</string>
    <string name="expenseNameHint">Expense Name</string>
    <string name="mateNameHint">Mate Name</string>
    <string name="mateEmailHint">Mate Email</string>
    <string name="save">Save</string>
    <string name="Save">Save</string>
    <string name="delete">Delete</string>
    <string name="editmate">Edit Mate</string>
</resources>
