<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/priceOfRent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/rentPriceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:ems="10"
        android:hint="@string/rent"
        android:inputType="numberDecimal"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rentPriceText"
        android:text="@string/numbOfPeople"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/peopleAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rentPriceText"
        android:layout_alignLeft="@+id/rentPriceText"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/rentPriceText"
        android:layout_alignStart="@+id/rentPriceText"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/numbOfPeopleHint"
        android:inputType="number"
        android:text="@string/zero" />

    <ImageButton
        android:id="@+id/rentDownBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_down" />

    <ImageButton
        android:id="@+id/rentUpBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_above="@+id/rentDownBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_up" />

    <ImageButton
        android:id="@+id/peopleDownBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/rentDownBtn"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_down" />

    <ImageButton
        android:id="@+id/peopleUpBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@+id/rentUpBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_up" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rentUpBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/rentController"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/peopleUpBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/peopleController"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/peopleAmountText"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/outputTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:text="@string/output"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <include
                android:id="@+id/calculateFabButton"
                layout="@layout/floating_action_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/makeRentExpense"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/card_view"
        android:enabled="false"
        android:text="Make new expense" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:text="@string/moneysymbol"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>